Fix logo alignment.

--- a/sass/App.sass
+++ b/sass/App.sass
@@ -33,14 +33,12 @@ body
       h1
         display: inline
         font: 2em Museo
-        letter-spacing: -0.05em
-        line-height: 1em
+        letter-spacing: -0.03em
         text-transform: lowercase
-        margin: 0
+        margin: 0 0.5em 0 0.3em
       svg
-        order: 1
-        margin-right: 1em
-        height: 40px
+        vertical-align: bottom
+        height: 2.2em
         g path
           fill: url(#g1)
         #g1 stop
